agrego pokemon y movimientos